--- a/wrangler.toml
+++ b/wrangler.toml
@@ -7,3 +7,7 @@ compatibility_date = "2023-10-02"
 # Docs: https://developers.cloudflare.com/workers/platform/environment-variables
 [vars]
 PUSHOVER_API_URL = "https://api.pushover.net"
+
+# wrangler.toml (wrangler v3.88.0^)
+[observability.logs]
+enabled = true
